--- a/APP-Analyse-your-text.ipynb
+++ b/APP-Analyse-your-text.ipynb
@@ -2,103 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (0.25.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from pandas) (2019.3)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from pandas) (1.17.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from pandas) (2.8.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n",
-      "Requirement already satisfied: matplotlib in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (3.1.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from matplotlib) (1.1.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from matplotlib) (2.4.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from matplotlib) (2.8.0)\n",
-      "Requirement already satisfied: numpy>=1.11 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from matplotlib) (1.17.2)\n",
-      "Requirement already satisfied: six in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from cycler>=0.10->matplotlib) (1.12.0)\n",
-      "Requirement already satisfied: setuptools in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib) (41.4.0)\n",
-      "Requirement already satisfied: Ipython in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (7.8.0)\n",
-      "Requirement already satisfied: prompt-toolkit<2.1.0,>=2.0.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (2.0.10)\n",
-      "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (4.7.0)\n",
-      "Requirement already satisfied: pickleshare in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (0.7.5)\n",
-      "Requirement already satisfied: pygments in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (2.4.2)\n",
-      "Requirement already satisfied: decorator in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (4.4.0)\n",
-      "Requirement already satisfied: jedi>=0.10 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (0.15.1)\n",
-      "Requirement already satisfied: backcall in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (0.1.0)\n",
-      "Requirement already satisfied: traitlets>=4.2 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (4.3.3)\n",
-      "Requirement already satisfied: appnope; sys_platform == \"darwin\" in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (0.1.0)\n",
-      "Requirement already satisfied: setuptools>=18.5 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from Ipython) (41.4.0)\n",
-      "Requirement already satisfied: wcwidth in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from prompt-toolkit<2.1.0,>=2.0.0->Ipython) (0.1.7)\n",
-      "Requirement already satisfied: six>=1.9.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from prompt-toolkit<2.1.0,>=2.0.0->Ipython) (1.12.0)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from pexpect; sys_platform != \"win32\"->Ipython) (0.6.0)\n",
-      "Requirement already satisfied: parso>=0.5.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from jedi>=0.10->Ipython) (0.5.1)\n",
-      "Requirement already satisfied: ipython-genutils in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from traitlets>=4.2->Ipython) (0.2.0)\n",
-      "Requirement already satisfied: ipywidgets in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (7.5.1)\n",
-      "Requirement already satisfied: nbformat>=4.2.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipywidgets) (4.4.0)\n",
-      "Requirement already satisfied: ipython>=4.0.0; python_version >= \"3.3\" in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipywidgets) (7.8.0)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipywidgets) (4.3.3)\n",
-      "Requirement already satisfied: ipykernel>=4.5.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipywidgets) (5.1.2)\n",
-      "Requirement already satisfied: widgetsnbextension~=3.5.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipywidgets) (3.5.1)\n",
-      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2.0->ipywidgets) (3.0.2)\n",
-      "Requirement already satisfied: ipython-genutils in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2.0->ipywidgets) (0.2.0)\n",
-      "Requirement already satisfied: jupyter-core in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2.0->ipywidgets) (4.5.0)\n",
-      "Requirement already satisfied: appnope; sys_platform == \"darwin\" in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (0.1.0)\n",
-      "Requirement already satisfied: setuptools>=18.5 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (41.4.0)\n",
-      "Requirement already satisfied: prompt-toolkit<2.1.0,>=2.0.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (2.0.10)\n",
-      "Requirement already satisfied: backcall in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (0.1.0)\n",
-      "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (4.7.0)\n",
-      "Requirement already satisfied: jedi>=0.10 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (0.15.1)\n",
-      "Requirement already satisfied: pickleshare in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (0.7.5)\n",
-      "Requirement already satisfied: decorator in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (4.4.0)\n",
-      "Requirement already satisfied: pygments in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (2.4.2)\n",
-      "Requirement already satisfied: six in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from traitlets>=4.3.1->ipywidgets) (1.12.0)\n",
-      "Requirement already satisfied: jupyter-client in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipykernel>=4.5.1->ipywidgets) (5.3.3)\n",
-      "Requirement already satisfied: tornado>=4.2 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from ipykernel>=4.5.1->ipywidgets) (6.0.3)\n",
-      "Requirement already satisfied: notebook>=4.4.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from widgetsnbextension~=3.5.0->ipywidgets) (6.0.1)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets) (19.2.0)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets) (0.15.4)\n",
-      "Requirement already satisfied: wcwidth in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from prompt-toolkit<2.1.0,>=2.0.0->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (0.1.7)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from pexpect; sys_platform != \"win32\"->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (0.6.0)\n",
-      "Requirement already satisfied: parso>=0.5.0 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from jedi>=0.10->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets) (0.5.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from jupyter-client->ipykernel>=4.5.1->ipywidgets) (2.8.0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pyzmq>=13 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from jupyter-client->ipykernel>=4.5.1->ipywidgets) (18.1.0)\n",
-      "Requirement already satisfied: nbconvert in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (5.6.0)\n",
-      "Requirement already satisfied: jinja2 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.10.3)\n",
-      "Requirement already satisfied: prometheus-client in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.7.1)\n",
-      "Requirement already satisfied: terminado>=0.8.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.8.2)\n",
-      "Requirement already satisfied: Send2Trash in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.5.0)\n",
-      "Requirement already satisfied: bleach in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (3.1.0)\n",
-      "Requirement already satisfied: defusedxml in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.6.0)\n",
-      "Requirement already satisfied: entrypoints>=0.2.2 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.3)\n",
-      "Requirement already satisfied: pandocfilters>=1.4.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.4.2)\n",
-      "Requirement already satisfied: testpath in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.4.2)\n",
-      "Requirement already satisfied: mistune<2,>=0.8.1 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.8.4)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.1.1)\n",
-      "Requirement already satisfied: webencodings in /Users/karin/opt/anaconda3/lib/python3.7/site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pandas\n",
-    "!pip install matplotlib\n",
-    "!pip install Ipython\n",
-    "!pip install ipywidgets\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display, Markdown, clear_output\n",
-    "import ipywidgets as widgets\n"
+    "import ipywidgets as widgets"
    ]
   },
   {
@@ -119,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
